<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <!-- Image Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/img1"
            android:contentDescription="@string/signupimage" />
    </LinearLayout>

    <!-- Create Account TextView -->
    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- First Name and Last Name EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/etfirstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_first_name"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_last_name"
            android:padding="10dp" />
    </LinearLayout>

    <!-- Email EditText -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="enter_email"
        android:padding="10dp" />

    <!-- Password and Confirm Password EditText -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etCPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_confirm_password"
        android:padding="10dp"
        android:inputType="textPassword" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        android:backgroundTint="#8F218D"
        android:layout_marginBottom="24dp" />

    <!-- Sign In TextView -->
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp" />
</LinearLayout>
